# functionforge

./: .gitignore  MLX_MACOS_SUPPORT.md  Makefile  README.md  compat.py  eval.py  predict.py  pyproject.toml  requirements.txt  train.py  utils.py
configs/: default.yaml
data/: attendancebot_tools.json  manual_labels.csv
data/raw/: extracted_errors.csv
sample_dataset/: eval.jsonl  train.jsonl
