[project]
name = "functionforge"
version = "0.1.0"
description = "Fine-tune FunctionGemma for structured function-call routing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "unsloth[colab-new]; sys_platform != \"darwin\"",
    "unsloth-zoo; sys_platform != \"darwin\"",
    "mlx-tune; sys_platform == \"darwin\"",
    "google-cloud-bigquery-storage",
    "transformers",
    "datasets",
    "torch",
    "accelerate",
    "peft",
    "trl; sys_platform != \"darwin\"",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "jsonschema",
    "tqdm",
    "tabulate",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }

